' DVG303 :: Objektorienterad design och programmering
' 860224 Jonas Sjöberg
' Högskolan i Gävle
' tel12jsg@student.hig.se
'
' Lab #1    Uppgift 2


@startuml
' ____________________________________________________________________________
' ____ CONFIGURATION OPTIONS __________________________________________________
' debug flag creates a 'svek.dot' and 'svek.svg' file in ~/
!pragma svek_trace on

' package graphical style
skinparam packageStyle folder

' don't use symbols to indicate visibility
' skinparam classAttributeIconsize 0


' ____________________________________________________________________________
' ____ CLASS DEFINITIONS ______________________________________________________
package se.hig.oodp.lab.model {
    class Vertex2D {
        -x:double
        -y:double
        --
        +Vertex2D(x:double, y:double)
        ..
        +getX():double
        +getY():double
        +moveBy(dx:double, dy:double):Vertex2D
        +rotate(ref:Vertex2D, angle:double):Vertex2D
        +scale(ref:Vertex2D, x_factor:double, y_factor:double):Vertex2D
        +toString():String
    }
}

package se.hig.oodp.lab.model.simplefigure {
    abstract class SimpleFigure {
        #position:Vertex2D
        --
        SimpleFigure(position:Vertex2D)
        ..
        +moveBy(dx:double, dy:double)
        +getPosition():Vertex2D
    }

    class Point {
        Point(position:Vertex2D)
        ..
        +toString():String
    }

    class Circle {
        -radius:double
        --
        +Circle(position:Vertex2D, radius:double)
        ..
        +scale(factor:double)
        +getRadius():double
        +toString():String
    }

    class Ellipse {
        -width:double
        -height:double
        --
        +Ellipse(position:Vertex2D, radius:double)
        ..
        +scale(xFactor:double, yFactor:double)
        +getWidth():double
        +getHeight():double
        +toString():String
    }
}

package se.hig.oodp.lab.model.figure {
    abstract class Figure {
        +DEFAULT_X_COORD:double
        +DEFAULT_Y_COORD:double
        #center:Vertex2D
        #vertices:ArrayList<Vertex2D>
        --
        +Figure(center:Vertex2D)
        ..
        -addVerticesToList(newVertices:Vertex2D...)
        +rotate(angle:double)
        {abstract} +scale(xFactor:double, yFactor:double)
        +moveBy(dx:double, dy:double)
        +getCenter():Vertex2D
        +getVertex(n:int):Vertex2D
    }

    class Line {
        -v0:Vertex2D
        -v1:Vertex2D
        --
        +Line(v0:Vertex2D, v1:Vertex2D)
        ..
        -updateCenterPoint()
        +scale(xFactor:double, yFactor:double)
        +toString():String
    }

    class Triangle {
        -v0:Vertex2D
        -v1:Vertex2D
        -v2:Vertex2D
        -width:double
        -height:double
        --
        +Triangle(center:Vertex2D, width:double, height:double)
        +Triangle(v0:Vertex2D, v1:Vertex2D, v2:Vertex2D)
        ..
        -calculateVerticesFromCenter()
        -updateCenterPoint()
        +scale(xFactor:double, yFactor:double)
        +toString():String
    }

    class Rectangle {
        -v0:Vertex2D
        -v1:Vertex2D
        -v3:Vertex2D
        -v3:Vertex2D
        -width:double
        -height:double
        --
        +Rectangle(center:Vertex2D, width:double, height:double)
        +Rectangle(v0:Vertex2D, v1:Vertex2D, v2:Vertex2D, v3:Vertex2D)
        ..
        -calculateVerticesFromCenter()
        -updateCenterPoint()
        -calculateWidth()
        -calculateHeight()
        +scale(xFactor:double, yFactor:double)
        +toString():String
    }

    class Square {
        -v0:Vertex2D
        -v1:Vertex2D
        -v3:Vertex2D
        -v3:Vertex2D
        -sideLength:double
        --
        +Square(center:Vertex2D, side:double)
        ..
        -updateCenterPoint()
        +scale(xFactor:double, yFactor:double)
        +toString():String
    }
}


' ____________________________________________________________________________
' ____ PACKAGE HIERARCHY _____________________________________________________
se.hig.oodp.lab.model +-- se.hig.oodp.lab.model.figure
se.hig.oodp.lab.model +-- se.hig.oodp.lab.model.simplefigure


' ____________________________________________________________________________
' ____ RELATIONS BETWEEN CLASSES _____________________________________________
' <|--      extension
' *--       composition
' o--       aggregation

Figure <.. Vertex2D
SimpleFigure <.. Vertex2D

SimpleFigure <|-- Point
SimpleFigure <|-- Circle
SimpleFigure <|-- Ellipse

Figure <|-- Line
Figure <|-- Triangle
Figure <|-- Rectangle
Figure <|-- Square




@enduml
